- Fixed Catchphrase animated text on mobile; - Added language selection in nav of main page; - Change forgotten old email in footer.

--- a/styles/components/catchphrase.scss
+++ b/styles/components/catchphrase.scss
@@ -16,6 +16,13 @@
   animation-name: fade-in;
   -moz-animation-name: fade-in;
 
+  #animated-text {
+    display: block;
+    @media only screen and (min-width: 1025px) {
+      display: inline;
+    }
+  }
+
   h1 {
     font-size: 5em;
     margin-bottom: 0;
