--- a/styles/global.scss
+++ b/styles/global.scss
@@ -168,7 +168,7 @@ h6 {
     margin-left: 0em;
 
     @media only screen and (min-width: 1025px) {
-      margin-left: 10em;
+      margin-left: auto;
     }
 
     @keyframes move_2 {
