--- a/styles/home.scss
+++ b/styles/home.scss
@@ -6,16 +6,17 @@
 #language_selection {
   display: flex;
   justify-content: center;
-  width: 100%;
+  width: 100vw !important;
   height: 100vh;
-  overflow-y: hidden !important;
+  max-width: none;
+  position: relative;
   
   .v_center {
     display: flex;
     flex-direction: column;
     justify-content: center;
     height: 100vh;
-    width: 100vw;
+    width: 100vw !important;
     text-align: center;
     font-size: 6em;
 
